# polymarket-trading-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.live.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/commands/: backtest-review.md  new-strategy.md
.claude/rules/: data-pipeline.md  execution.md  risk.md  security.md  session-end.md  strategies.md  testing.md
.github/workflows/: ci.yml
config/: default.toml  development.toml  paper.toml  production.toml  redis.conf
config/strategies/: before_window_open.toml  false_sentiment.toml  singularity.toml
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
dashboard/src/: middleware.ts
data/: fetch_1m_chunk1.py  fetch_1m_chunk4.py  fetch_1m_chunk6.py
data/validation/: dashboard.html
docs/brain/: ARCHITECTURE.md  DECISIONS.md
grafana/dashboards/: dashboards.yml  overview.json  performance.json  risk-metrics.json  trading-signals.json
grafana/datasources/: datasources.yml
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml.example  service.yaml
models/: bwo_model_min3.joblib  paper_continuation_min3.joblib  paper_feature_names.json  paper_pricing_min3.joblib
nginx/: nginx.conf
rs-clob-python/: Cargo.toml  pyproject.toml
rs-clob-python/src/: lib.rs
rust-backtest/: Cargo.toml
rust-backtest/crates/mvhe-cli/: Cargo.toml
rust-backtest/crates/mvhe-cli/src/: main.rs
rust-backtest/crates/mvhe-core/: Cargo.toml
rust-backtest/crates/mvhe-core/src/: candle.rs  config.rs  lib.rs  signal.rs  window.rs
rust-backtest/crates/mvhe-engine/: Cargo.toml
rust-backtest/crates/mvhe-engine/benches/: engine_bench.rs
rust-backtest/crates/mvhe-engine/src/: engine.rs  fill_sim.rs  lib.rs  metrics.rs  parallel.rs  validator.rs
rust-backtest/crates/mvhe-strategy/: Cargo.toml
rust-backtest/crates/mvhe-strategy/src/: false_sentiment.rs  lib.rs  momentum.rs  singularity.rs  traits.rs
scripts/: analyze_directional_accuracy.py  analyze_predictors.py  backtest_before_window.py  backtest_execution_overhaul.py  backtest_honest.py  backtest_optimize.py  backtest_to_dashboard.py  backup.sh  bwo_15m_fixed_backtest.py  bwo_5m_backtest.py  bwo_5m_paper_trader.py  bwo_buyboth_backtest.py  bwo_continuation_backtest.py  bwo_data_server.py  bwo_hybrid_backtest.py  bwo_ml_backtest.py  bwo_options_backtest.py  bwo_orderflow_backtest.py  bwo_paper_trader.py  bwo_regime_backtest.py  deploy_paper.sh  download_btc_2y.py  download_deribit_data.py  download_futures_data.py  download_polymarket_btc.py  fast_loader.py  fast_loader_v3.py  fast_optimize.py  fetch_btc_1m_chunk2.py  fetch_btc_1m_chunk5.py  fetch_btc_chunk3.py  final_strategy_detail.py  generate_backtest_data.py  optimize_strategy.py  run_backtest.py  run_full_strategy_sim.py  run_momentum_backtest.py  run_real_backtest.py  run_settlement_backtest.py  run_swing_backtest.py  (+9 more)
scripts/validation/: build_dashboard.py  monte_carlo.py  polymarket_real.py  regime_stress.py  sensitivity.py  walk_forward.py
sql/: clickhouse_schema.sql
src/: __main__.py  bot.py  cli.py  interfaces.py
src/backtesting/: __init__.py  data_loader.py  engine.py  fill_simulator.py  metrics.py  reporter.py  validator.py
src/calibration/: __init__.py  bayesian_calibrator.py  calibration_tracker.py  edge_calculator.py
src/config/: __init__.py  loader.py
src/core/: logging.py
src/data/: __init__.py  binance_futures_ws.py  binance_ws.py  candle_aggregator.py  clickhouse_store.py  market_resolver.py  polymarket_client.py  polymarket_scanner.py  polymarket_ws.py  redis_cache.py  timescaledb.py
src/engine/: __init__.py  book_analyzer.py  confidence_scorer.py  dynamic_threshold.py  exit_manager.py  liquidity_filter.py  market_speed.py  oi_delta_tracker.py  (+9 more)
tests/: conftest.py  test_bot.py  test_cli.py  test_interfaces.py
(+169 files in other folders)
