[package]
name = "rs-clob-python"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
publish = false

[lib]
name = "rs_clob_python"
crate-type = ["cdylib"]

[dependencies]
polymarket-client-sdk = { path = "/tmp/rs-clob-client", features = ["clob"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
alloy = { version = "1.6", default-features = false, features = ["signer-local", "signers"] }
chrono = "0.4"
rust_decimal = "1.40"
serde_json = "1"
