[package]
name = "mvhe-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
memmap2 = { workspace = true }
fast-float = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
